@startuml todo

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity Project {
    *_id: ObjectId
    --
    name: String
    isDone: Boolean
    tasks: ObjectId[]
    users: ObjectId[]
}

entity Task {
    *_id: ObjectId
    --
    name: String
    isDone: Boolean
}

entity User {
    *_id: ObjectId
    --
    name: String
    email: String
    password: String
    isMale: Boolean
    age: Number
    role: String
    imagePath: String
    projects: ObjectId[]
    tasks: ObjectId[]
}

User ||--|{ Task
User }|--|{ Project
Task }|--|| Project

@enduml